<resources>
    <string name="app_name"> San Francisco Farmers Market</string>
    <string name="edit_message">  Configura Gastos</string>
    <string name="checkbox1">1 Alimentos</string>
    <string name="checkbox2">2 Diversion</string>
    <string name="checkbox3">3 Transporte</string>
    <string name="checkbox4">4 Hogar</string>
    <string name="checkbox5">5 Educacion</string>
    <string name="dercheckbox1">1 Alimentos</string>
    <string name="dercheckbox2">2 Diversion</string>
    <string name="dercheckbox3">3 Transporte</string>
    <string name="dercheckbox4">4 Hogar</string>
    <string name="dercheckbox5">5 Educacion</string>
    <string name="switch1">Fijos</string>
    <string name="checkbox6">6 Salud</string>
    <string name="dercheckbox6">6 Salud</string>
    <string name="checkbox7">7 Otros</string>
    <string name="dercheckbox7">7 Otros</string>
    <string name="edit_message2">Enter a message</string>
    <string name="item1">Config</string>
    <string name="item2">Reporte</string>
    <string name="item3">Ayuda</string>
    <string name="item4">Feedback</string>
    <string name="text_fijo">Fijos</string>
    <string name="text_variables">Variables</string>
    <string name="zero">0</string>
    <string name="radioButtonPorDia">Por Dia</string>
    <string name="radioButtonPorRango">Por Rango</string>
    <string name="dateConsulta">Fecha Inicial</string>
    <string name="textPorDia">Selecciona</string>
    <string name="consultaButton">Consulta</string>
    <string name="dateConsulta2">Fecha Final</string>
    <string name="feedbackText">Comentarios / Sugerencias / Mejoras / Fallas</string>
    <string name="Enviar">Enviar</string>
    <string name="Nombre">Asunto</string>
    <string name="Mail">Retroalimentacion:</string>

    <string name="mainText">Empleado</string>
    <string name="button_send">Ponchar</string>
    <string name="empleado1">Rosy</string>
    <string name="empleado2">Ingrid</string>
    <string name="empleado3">Amelia</string>
    <string name="empleado4">Armando</string>
    <string name="empleado5">Tono</string>
    <string name="empleado6">Daniela</string>
    <string name="empleado7">Cajas6</string>
    <string name="empleado8">Carniceria1</string>
    <string name="empleado9">Franco</string>
    <string name="empleado10">Verduras1</string>
    <string name="empleado11">Cajas7</string>
    <string name="empleado12">Verduras2</string>
    <string name="empleado13">Verduras3</string>
    <string name="empleado14">Wilfredo</string>
</resources>
