<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/config"
        android:icon="@drawable/test"
        android:title="@string/item1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_help"
        android:title="@string/item2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/item3"
        app:showAsAction="never"/>

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_help"
        android:title="@string/item4"
        app:showAsAction="never"/>
</menu>


    <!-- 'app:showAsAction="ifRoom ' -->
    <!-- 'app:showAsAction="never" //esto hace que no se muestre este elemento del menu en la barra ' -->
