<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buendiasoftware.bancarota.report">

    <android.support.v7.widget.Toolbar
        android:id="@+id/reportes_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/dateConsulta"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="328dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:text="@string/dateConsulta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <EditText
        android:id="@+id/dateConsulta2"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginTop="332dp"
        android:layout_marginRight="64dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:text="@string/dateConsulta2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateConsulta"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="101dp"
        android:layout_height="26dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/textPorDia"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado1"
        android:layout_width="97dp"
        android:layout_height="31dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="100dp"

        android:text="@string/empleado1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

      <CheckBox
        android:id="@+id/chkbox_empleado2"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"

        android:text="@string/empleado2"
        app:layout_constraintStart_toEndOf="@+id/chkbox_empleado1"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado3"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"

        android:text="@string/empleado3"
        app:layout_constraintStart_toEndOf="@+id/chkbox_empleado2"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado4"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"

        android:text="@string/empleado4"
        app:layout_constraintStart_toEndOf="@+id/chkbox_empleado3"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado5"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"

        android:layout_marginTop="176dp"
        android:text="@string/empleado5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado6"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="176dp"
        android:text="@string/empleado6"
        app:layout_constraintStart_toEndOf="@+id/chkbox_empleado5"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado7"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="176dp"
        android:text="@string/empleado7"
        app:layout_constraintStart_toEndOf="@+id/chkbox_empleado6"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado8"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="176dp"
        android:text="@string/empleado8"
        app:layout_constraintStart_toEndOf="@+id/chkbox_empleado7"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <CheckBox
        android:id="@+id/chkbox_empleado9"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="244dp"
        android:text="@string/empleado9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="392dp"
        android:onClick="consultaDB"
        android:text="@string/consultaButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportes_toolbar" />


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#3d455b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <HorizontalScrollView
            android:id="@+id/hscrll1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/table_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"></TableLayout>
            </RelativeLayout>
        </HorizontalScrollView>
    </ScrollView>



</android.support.constraint.ConstraintLayout>
